# pdfcraft

./: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
scripts/: generate_icon.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: convert.rs  file.rs  merge.rs  mod.rs
src-tauri/src/models/: config.rs  ebook.rs  mod.rs  pdf.rs
src-tauri/src/services/: epub_builder.rs  format_converter.rs  mod.rs  ocr_engine.rs  pdf_merger.rs  pdf_parser.rs
src-tauri/src/utils/: error.rs  progress.rs
src-tauri/tests/: convert_real_pdf.rs  convert_to_md.rs  merge_real_pdfs.rs
src/components/common/: DropZone.tsx  ProgressBar.tsx
src/components/convert/: ConvertPage.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/components/merge/: MergeOptions.tsx  MergePage.tsx  SortableFileItem.tsx
src/components/settings/: SettingsPage.tsx
src/locales/: en-US.json  i18n.ts  zh-CN.json
src/services/: convertService.ts  pdfService.ts  settingsService.ts
src/tests/: components.test.tsx  i18n.test.ts  layout.test.tsx
src/types/: index.ts
