[package]
name = "pdfcraft"
version = "0.1.0"
description = "A lightweight PDF merge & e-book converter"
authors = ["PDFCraft Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pdfcraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

# PDF processing
lopdf = "0.34"

# EPUB generation
epub-builder = "0.7"

# Image processing
image = "0.25"
base64 = "0.22"
